Font change,  general cleanup

--- a/website.css
+++ b/website.css
@@ -4,7 +4,7 @@ body {
 
 span {
     color: #f0f8ff;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Calibri, sans-serif;
     font-size: 20px;    
 }
 
@@ -18,7 +18,7 @@ hr {
 header {
     background-color: #1b1b1b;
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
     position: sticky;
     top: 0;
 }
@@ -26,6 +26,11 @@ header {
     background-color: #1b1b1b;
     border: none;
 }
+.header-text {
+    margin-top: -2px;
+}
+
+
 
 .pfp { 
     display: flex;
@@ -69,8 +74,8 @@ header {
 }
 
 .gamesuid {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
     justify-content: center;
     flex-wrap: wrap;
@@ -84,6 +89,7 @@ header {
 .gamesheader span{
     font-size: 30px;
     font-weight: bold;
+    margin-bottom: 22px;
 }
 
 .games {
@@ -133,11 +139,12 @@ header {
 }
 
 
+
 @media (max-width: 600px) {
     .pfp-img-wrapper {
         width: 150px;
         height: 150px;
-        margin-bottom: 50px;
+        margin-bottom: 15px;
         margin-right: -10px;
     }
     .pfpshape {
@@ -149,7 +156,7 @@ header {
         height: 150px;
     }
     .pfpname {
-        margin-top: -50px;
+        margin-top: -20px;
         font-size: 40px;
     }
     .pfpdesc {
